[project]
name = "continuousmiestimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
    {name = "continuousmiestimation._MIxnyn", sources = ["src/continuousmiestimation/MIxnyn.C"]}
]
